# Aion_charts

./: .gitignore  .npmrc  ALIGNMENT_TODO.md  Cargo.toml  LICENSE  README.md  TODO.md  dev.py  feature_audit.md.resolved  package-lock.json  package.json  playwright.config.ts  raycore_wasm.d.ts  raycore_wasm.js  raycore_wasm_bg.wasm.d.ts  rust-toolchain.toml  rustfmt.toml  serve.py
.claude/: launch.json
.github/workflows/: ci.yml  publish-package.yml  release.yml
.playwright-mcp/: page-2026-04-24T00-06-23-418Z.yml
benches/: core_benchmarks.rs
crates/aion_core/: Cargo.toml
crates/aion_core/src/: lib.rs  options.rs
crates/aion_core/src/format/: mod.rs  percentage_formatter.rs  price_formatter.rs  time_formatter.rs  volume_formatter.rs
crates/aion_core/src/helpers/: algorithms.rs  mathex.rs  mod.rs
crates/aion_core/src/model/: data_layer.rs  data_validation.rs  invalidate_mask.rs  magnet.rs  mod.rs  plot_list.rs  price_range.rs  range.rs
crates/aion_core/src/scale/: log_formula.rs  mod.rs  price_scale_core.rs  price_tick_span_calculator.rs  time_scale_core.rs  time_tick_marks.rs
crates/aion_engine/: Cargo.toml
crates/aion_engine/src/: frame.rs  hit_test.rs  indicators.rs  lib.rs  price_line_api.rs  price_scale_api.rs  series_query_api.rs  tests.rs
crates/aion_engine/src/frame/: axis.rs  conflation.rs  crosshair.rs  mod.rs  series_geometry.rs  tests.rs
crates/aion_engine/src/hit_test/: probe_test.rs  tests.rs
crates/aion_engine/src/hit_test/tests/: edge_panics.rs
crates/aion_indicators/: Cargo.toml
crates/aion_indicators/src/: lib.rs
crates/aion_native/: Cargo.toml
crates/aion_native/examples/: engine.rs  engine_perf.rs  interaction_perf.rs  parity_fixture.rs  perf_gate.rs  scene.rs
crates/aion_native/src/: engine_scene.rs  lib.rs  scene.rs
crates/aion_native/tests/: golden.rs
crates/aion_render/: Cargo.toml
crates/aion_render/src/: bar_width.rs  bars.rs  candles.rs  canvas2d.rs  color.rs  draw_list.rs  histogram.rs  lib.rs  line.rs
crates/aion_render_wgpu/: Cargo.toml
crates/aion_render_wgpu/src/: atlas.rs  blend.rs  frame.rs  lib.rs  quad_executor.rs  quad_pipeline.rs  tex_quad_pipeline.rs  tri_executor.rs  tri_pipeline.rs
crates/aion_render_wgpu/tests/: frame_contract.rs
crates/aion_wasm/: Cargo.toml
crates/aion_wasm/src/: axis_policy.rs  backend_policy.rs  canvas2d_target.rs  chart.rs  color_policy.rs  custom_align.rs  lib.rs  prim_decode.rs  text.rs  text_cache.rs
crates/aion_wasm/src/chart/: custom_series.rs  inner_api.rs  inner_render.rs  primitives.rs  text_runs.rs
demo/: index.html
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EXECUTION_PLAN.md  INTERACTION_PARITY_DESIGN.md  PLUGIN_PLATFORM_DESIGN.md  PRODUCTION_ROADMAP.md  README.md  RENDERING_SPEC.md  api-reference.md  architecture.md  charting-engine.md  drawing-persistence.md  drawing-tools.md  events.md  execution-marks-persistence.md  execution-marks-worker-plan.md  execution-marks.md  feature-matrix.md  framework-guide.md  getting-started.md  indicator-runtime.md  migration-notes.md  performance.md  persistent.md  price-domain.md  testing.md  theming.md
examples/web_demo/: README.md  fixture_canvas_plugin.js  fixture_custom_series.js  fixture_data.js  fixture_features.js  fixture_styles.js  index.html  lwc_reference.html  package-lock.json  package.json  playwright.config.mjs  probe_axes.mjs  probe_brl.mjs  probe_chipdbg.mjs  probe_corner.mjs  probe_corner2.mjs  probe_corner3.mjs  probe_corner4.mjs  probe_corner5.mjs  probe_corr.mjs  probe_dbg.mjs  probe_dbg2.mjs  probe_diff.mjs  probe_diff2.mjs  probe_dots.mjs  probe_dots2.mjs  probe_dots3.mjs  probe_dots4.mjs  probe_dots5.mjs  probe_dots6.mjs  probe_dotted_pl.mjs  probe_dpb.mjs  probe_geom.mjs  probe_isopath.mjs  probe_ladder.mjs  probe_ladder2.mjs  probe_measure.mjs  probe_measure2.mjs  probe_measure3.mjs  probe_measure4.mjs  (+7 more)
examples/web_demo/tests/: backend-parity.spec.mjs  builtin-plugins.spec.mjs  canvas-primitives.spec.mjs  cross-browser.spec.mjs  custom-series.spec.mjs  hit-testing.spec.mjs  last-value-cluster.spec.mjs  prim-text.spec.mjs  primitives.spec.mjs  series-primitives.spec.mjs
raycore/demo/: index.html
raycore/shaders/: rect.wgsl
raycore/src/core/: demo_data.rs  formatters.rs  mod.rs  viewport.rs
scripts/: build-wasm-artifacts.mjs  check-wasm-artifacts.mjs
shaders/: area.wgsl  candle.wgsl  candles.wgsl  gradient_rect.wgsl  line.wgsl  volume.wgsl
src/: lib.rs
src/core/: chart_type.rs  constants.rs  crosshair.rs  data.rs  demo_data.rs  engine.rs  events.rs  execution_marks.rs  footprint.rs  formatters.rs  guardrails.rs  interaction.rs  invalidate_mask.rs  kinetic_animation.rs  markers.rs  mod.rs  order_line.rs  pane.rs  price_line.rs  viewport.rs
src/core/drawings/: brush.rs  drawing.rs  fibonacci.rs  hit_test.rs  horizontal_line.rs  mod.rs  path.rs  persistence.rs  ray.rs  rectangle.rs  scale.rs  text_drawing.rs  trend_line.rs  types.rs  vertical_line.rs
src/core/indicators/: mod.rs
src/core/renderer/: axis_label_geometry.rs  backend_parity_tests.rs  baseline_utils.rs  candle_renderer.rs  candle_series.rs  canvas2d.rs  canvas_dash.rs  draw_list.rs  footprint_generator.rs  geometry_generator.rs  grid.rs  (+18 more)
src/group/: chart_group.rs  mod.rs  pane.rs  sync_manager.rs
tests/: backend_parity.rs
tests/e2e/: aion-harness.ts  api-regression.spec.ts  axius-harness.ts  compat-facade.spec.ts  demo.spec.ts  drawing-text.spec.ts  markers.spec.ts  rendering-stability.spec.ts  visual-regression.spec.ts
wasm/: Cargo.toml  aion_charts-compat.d.ts  aion_charts-compat.js  aion_charts.d.ts  axiuscharts-compat.d.ts  axiuscharts-compat.js  axiuscharts.d.ts  indicator-worker.d.ts  indicator-worker.js  raycore.d.ts
wasm/pkg/: .gitignore  aion_charts_wasm.d.ts  aion_charts_wasm.js  aion_charts_wasm_bg.wasm  aion_charts_wasm_bg.wasm.d.ts  axiuscharts_wasm.d.ts  axiuscharts_wasm.js  axiuscharts_wasm_bg.wasm  axiuscharts_wasm_bg.wasm.d.ts  package.json
wasm/src/: canvas_manager.rs  chart_inner.rs  event_emitter.rs  lib.rs  lib.rs-events.txt  render_frame.rs  subpane.rs  utils.rs  workspace.rs
(+66 files in other folders)
