[workspace]
members = [".", "wasm"]
resolver = "2"

[package]
name = "aion_charts"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
description = "Aion_charts — high-performance GPU-accelerated charting engine"

[features]
default = []
indicator_runtime_v1 = []
parity-tests = []

[lib]
name = "aion_charts"
path = "src/lib.rs"

[dependencies]
wgpu = "28.0"
bytemuck = { version = "1.21", features = ["derive"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
arrow = "55.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "TextMetrics",
    "DomStringMap",
    "console",
] }
console_log = "1.0"
console_error_panic_hook = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = false
