[workspace]
resolver = "2"
members = [
    "crates/aion_core",
    "crates/aion_render",
    "crates/aion_render_wgpu",
    "crates/aion_wasm",
    "crates/aion_native",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Aion Charts"]
repository = ""

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# wasm release builds care about size too; tune later per-target.
