[workspace]
resolver = "2"
members = [
    "crates/aion_core",
    "crates/aion_indicators",
    "crates/aion_engine",
    "crates/aion_render",
    "crates/aion_render_wgpu",
    "crates/aion_wasm",
    "crates/aion_native",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Aion Charts"]
repository = ""

# Shared lint policy; every crate opts in via `[lints] workspace = true`.
# CI enforces clippy with `-D warnings` on top of this.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# wasm release builds care about size too; tune later per-target.
