[package]
name = "raycore-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
description = "RayCore WASM entry point — thin JS interop layer"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
raycore = { path = ".." }
wgpu = "28.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlDivElement",
    "HtmlElement",
    "CssStyleDeclaration",
    "CanvasRenderingContext2d",
    "TextMetrics",
    "GpuCanvasContext",
    "Navigator",
    "Gpu",
    "console",
    "Performance",
    "MouseEvent",
    "WheelEvent",
    "PointerEvent",
    "EventTarget",
    "EventListener",
    "AddEventListenerOptions",
    "ResizeObserver",
    "ResizeObserverEntry",
    "DomRectReadOnly",
    "DomRect",
] }
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"
bytemuck = { version = "1.21", features = ["derive"] }
