[package]
name = "aion_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Platform-free chart model: scales, ranges, invalidation, formatters (ported from the reference charting library)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
