[package]
name = "aion_engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless chart model and frame-production state for Aion Charts"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aion_core = { path = "../aion_core" }
aion_indicators = { path = "../aion_indicators" }
aion_render = { path = "../aion_render" }

[lints]
workspace = true
