[package]
name = "aion_native"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native rasterizer target for the Prim IR: tiny-skia backend for golden-image tests and server-side PNG rendering"

[dependencies]
aion_core = { path = "../aion_core" }
aion_engine = { path = "../aion_engine" }
aion_render = { path = "../aion_render" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny-skia = "0.11"

[lints]
workspace = true
