[package]
name = "aion_render_wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebGPU backend for aion_render draw lists (pipelines, glyph atlas, batching)"

[dependencies]
aion_render = { path = "../aion_render" }
wgpu = { version = "25", default-features = false, features = ["webgpu", "wgsl"] }
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
aion_engine = { path = "../aion_engine" }

[lints]
workspace = true
